@startuml

skinparam classAttributeIconSize 0
skinparam monochrome true
scale 600 height
hide circle
skinparam linetype polyline
skinparam defaultClassScale 200 height

class Weather {
    date: Datetime
    location: string
    temperature: float
    hydrometry: float
}

class Pot {
    location: string
}

Pot "*" x-> "1" Plant
Plant "*" --o "1" PlantType
Pot "*" <--x "1" Gardener

class Plant {
    date: Datetime
}

class PlantType {
    name: string
}

class Gardener {
    username: string
    email: string
}

Plant "1" x-> "*" Recipe
Gardener "1" x--> "*" Recipe

class Recipe {
    optimalTemperature: float
    optimalHydrometry: float
}

@enduml